<resources>
    <string name="app_name">MSEunibzMeAl</string>
    <string name="title_activity_display_events">DisplayEventsActivity</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="title_activity_library">LibraryActivity</string>
    <string name="title_activity_free_rooms">FreeRoomsActivity</string>

    <string name="button_mensaCam">Mensa Web Cam</string>
    <string name="button_rooms">Vacant Rooms</string>
    <string name="button_fyw">Find Your Way</string>
    <string name="button_events">UNIBZ Events</string>
    <string name="button_library">Library</string>
    <string name="title_activity_book_details">BookDetailsActivity</string>
    <string name="title_activity_apiconnection">APIConnectionActivity</string>
    <string name="title_activity_mensa_cam">MensaCamActivity</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="infoMercy">I am Mercy. Second year Student of UNIBZ at MSc level. I like pizza.</string>
    <string name="infoAlex">I am Alex. Second year Student of UNIBZ at MSc level. And also a DJ.</string>
    <string name="title_activity_navigate">NavigateActivity</string>
</resources>
