<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_home_page"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="it.meal.unibz.mseunibzmeal.HomePageActivity"
    tools:showIn="@layout/activity_home_page">

    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical"
    android:padding="6dip" >

    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="horizontal" >

    <Button
    android:id="@+id/eventsButton"
    style="@style/HomeButton"
    android:drawableTop="@drawable/power_connection_indicator"
    android:onClick="onButtonClicker"
    android:text="@string/button_events" />

    <Button
    android:id="@+id/fywButton"
    style="@style/HomeButton"
    android:drawableTop="@drawable/map_symbol"
    android:onClick="onButtonClicker"
    android:text="@string/button_fyw" />
</LinearLayout>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"    android:orientation="horizontal" >

<Button
    android:id="@+id/mensaCamButton"
    style="@style/HomeButton"
    android:drawableTop="@drawable/hangouts_videocall_button"
    android:onClick="onButtonClicker"
    android:text="@string/button_mensaCam" />

<Button
    android:id="@+id/libraryButton"
    style="@style/HomeButton"
    android:drawableTop="@drawable/bookmark_button"
    android:onClick="onButtonClicker"
    android:text="@string/button_library" />
    </LinearLayout>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="horizontal" >

<Button
    android:id="@+id/roomsButton"
    style="@style/HomeButton"
    android:drawableTop="@drawable/web_server"
    android:onClick="onButtonClicker"
    android:text="@string/button_rooms" />

<Button
    android:id="@+id/other"
    style="@style/HomeButton"
    android:drawableTop="@drawable/map_symbol"
    android:onClick="onButtonClicker"
    android:text="Other" />
    </LinearLayout>
    </LinearLayout>
    </LinearLayout>

